src/stylesheets/Tools.css
.carousel {
  width:435px;
  height:800px;
  margin: auto;
}

.carousel-control-prev-icon,
.carousel-control-next-icon {
  height: 100px;
  width: 100px;
  background-size: 100%, 100%;
  border-radius: 50%;
  background-image: none;
}

.carousel-control-next-icon:after
{
  content: '>';
  font-size: 55px;
  color: gray;
}

.carousel-control-prev-icon:after {
  content: '<';
  font-size: 55px;
  color: gray;
}

.carousel-custom {
  flex-wrap: wrap;
}

.carousel-custom-caption {
  text-align: center;
  color: black;
  font-size: 1.8rem;
  font-weight: 300;
}


.vertical-timeline-element.vertical-timeline-element--right .vertical-timeline-element-content .vertical-timeline-element-date, .vertical-timeline-element:nth-child(even):not(.vertical-timeline-element--left) .vertical-timeline-element-content .vertical-timeline-element-date {
  left: auto;
  text-align: right;
  color: white;
  font-size: 22px;
}

.vertical-timeline-element-content .vertical-timeline-element-date {
    left: 5%;
    position: absolute;
    top: -58px;
    color: white;
    font-size: 22px;
}

@media (min-width: 1170px) {
  .vertical-timeline-element.vertical-timeline-element--right .vertical-timeline-element-content .vertical-timeline-element-date, .vertical-timeline-element:nth-child(even):not(.vertical-timeline-element--left) .vertical-timeline-element-content .vertical-timeline-element-date {
    right: 150%;
    top: -19px;
    font-size: 30px;
  }
  
  .vertical-timeline-element-content .vertical-timeline-element-date {
      font-size: 30px;
      top: -19px;
      left: 150%;
  }
}

testClass{

}

